cmake_minimum_required(VERSION 3.12)
include_directories(${CMAKE_SOURCE_DIR})
set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)
add_library(lib-simulator STATIC simulator.cpp)
target_include_directories(lib-simulator PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_include_directories(lib-simulator PRIVATE ${CMAKE_HOME_DIRECTORY}/src/)
